# inkc

./: .gitignore  CMakeLists.txt  INK-PROOF.md  LICENSE  Makefile  README.md  coverage.sh  lit.cfg.py  lit.site.py
cmake/: cmocka.cmake  coverage.cmake  cpm.cmake  sanitizers.cmake
docs/: Doxyfile
fuzzing/: fuzz_harness.c  fuzz_main_standalone.c
include/ink/: ink.h
scripts/: coverage.sh
src/: CMakeLists.txt  arena.c  arena.h  ast.c  ast.h  astgen.c  astgen.h  codegen.c  codegen.h  common.c  common.h  compile.c  compile.h  gc.c  gc.h  hashmap.h  ir.c  ir.h  lex.c  lex.h  logging.c  logging.h  main.c  memory.c  memory.h  object.c  object.h  opcode.h  option.c  option.h  parse.c  parse.h  parser.c  parser.h  platform.c  platform.h  scanner.c  scanner.h  source.c  source.h  (+15 more)
src/cli/: CMakeLists.txt  main.c  option.c  option.h
testing/: main.c  test_main.c
testing/errors/: too-few-args.ink  too-many-args.ink
testing/exec/choices/monsieur-fogg/: transcript.txt
testing/exec/gathers/monsieur-fogg/: transcript.txt
testing/ir/: stitch-declaration-02.ink  temp-declaration.ink
testing/syntax/choices/: after-text.ink  empty.ink
testing/syntax/conditionals/: error-final-else.ink  error-multiple-else-02.ink
testing/syntax/expressions/: assignment.ink  fail-assignment-const.ink
testing/syntax/functions/: factorial.ink
testing/syntax/gathers/: greater-level.ink  nested.ink  simple-02.ink  simple.ink
testing/syntax/knots/: qualified-lookup.ink  simple.ink
tests/: fuzz.c  fuzz_main.c  fuzz_main.cc  main.c
tests/bytecode/: choices-02.ink  conditional-01.ink  conditional-02.ink  conditional-03.ink  conditional-04.ink  conditional-05.ink  diverts-01.ink  diverts-02.ink  factorial.ink  fibonacci.ink
tests/custom/: braces-01.ink  braces-02.ink  braces-03.ink  braces-04.ink  braces-05.ink  braces-06.ink  braces-07.ink  braces-08.ink  choices-01.ink  choices-02.ink  choices-03.ink  choices-04.ink  choices-05.ink  choices-06.ink  choices-07.ink  condition-01.ink  condition-02.ink  condition-03.ink  gathers-01.ink  gathers-02.ink  gathers-03.ink  gathers-04.ink  gathers-05.ink  inline-sequence-01.ink  knot-01.ink  knot-02.ink  knot-03.ink  knot-04.ink  knot-05.ink  list-01.ink  list-02.ink  nesting-02.ink
tests/errors/: knot-return.ink  too-few-args.ink  too-many-args.ink  undefined-knot.ink  undefined-stitch.ink
tests/ink-proof/: I001.ink  I002.ink  I005.ink  I006.ink  I007.ink  I010.ink  I011.ink  I017.ink  I018.ink  I019.ink  I022.ink  I023.ink  I026.ink  I033.ink  I050.ink  I051.ink  I055.ink  I064.ink  I102.ink  I103.ink  I118.ink  I119.ink  I121.ink  I124.ink  I133.ink  I134.ink  I135.ink
tests/ink-proof/I001/: ast.ink
tests/ink-proof/I002/: ast.ink
tests/ink-proof/I005/: ast.ink
tests/ink-proof/I006/: ast.ink
tests/ink-proof/I007/: ast.ink
tests/ink-proof/I008/: ast.ink
tests/ink-proof/I010/: ast.ink
tests/ink-proof/I011/: ast.ink
tests/ink-proof/I012/: ast.ink
tests/ink-proof/I014/: ast.ink
tests/ink-proof/I016/: ast.ink
tests/ink-proof/I017/: ast.ink
tests/ink-proof/I018/: ast.ink
tests/ink-proof/I019/: ast.ink
tests/ink-proof/I021/: ast.ink
tests/ink-proof/I022/: ast.ink
tests/ink-proof/I023/: ast.ink
tests/ink-proof/I033/: ast.ink
tests/ink-proof/I036/: ast.ink
tests/ink-proof/I042/: ast.ink
tests/ink-proof/I050/: ast.ink
tests/ink-proof/I051/: ast.ink
tests/ink-proof/I055/: ast.ink
tests/ink-proof/I075/: ast.ink
tests/ink-proof/I076/: ast.ink
tests/ink-proof/I096/: ast.ink
tests/ink-proof/I097/: ast.ink
tests/ink-proof/I102/: ast.ink
tests/ink-proof/I103/: ast.ink
tests/ink-proof/I112/: ast.ink
tests/ink-proof/I115/: ast.ink
tests/ink-proof/I116/: ast.ink
tests/ink-proof/I119/: ast.ink
tests/ink-proof/I124/: ast.ink
tests/ink-proof/I135/: ast.ink
tests/ir/: function-declaration-01.ink  knot-declaration-01.ink  knot-declaration-02.ink  knot-ref-params.ink  multi-conditional-01.ink  simple-conditional-01.ink  stitch-declaration-01.ink  stitch-declaration-03.ink  stitch-declaration-04.ink  var-declaration.ink
tests/runtime/conditionals/: multi.ink  switch.ink
tests/runtime/content/glue/: story.ink
tests/runtime/expressions/binary-expressions/: story.ink
tests/runtime/expressions/mixed-expressions/: story.ink
tests/runtime/gathers/monsieur-fogg/: story.ink
tests/syntax/: assignment.ink  choices-04.ink  choices-05.ink  condition-02.ink  expression-01.ink  functions-01.ink  gathers-01.ink  gathers-02.ink  gathers-03.ink  inline-logic-01.ink  inline-logic-02.ink  inline-sequence-02.ink  knot-01.ink  knot-02.ink  knot-03.ink  knot-04.ink  knot-05.ink  knot-ref-params.ink  list-03.ink  nesting-01.ink  qualified-lookup.ink
tests/syntax/choices/: after-text.ink  conditional-in-choice-branch-02.ink  conditional-in-choice-branch.ink  empty-all.ink  empty-branches.ink  empty.ink  nested.ink  nesting-rules.ink  optional-text.ink  realistic.ink  simple.ink
tests/syntax/conditionals/: english-numbers.ink  error-empty.ink  error-expected-else.ink  error-final-else.ink  error-multiple-else-01.ink  error-multiple-else-02.ink  logical-and.ink  logical-or.ink  multi-conditional-01.ink  multi-conditional-02.ink  nested-conditional-01.ink  simple-if-else.ink  simple-if.ink  simple-switch.ink  switch-02.ink
tests/syntax/content/: empty.ink  hello-world.ink  interpolation.ink
tests/syntax/expressions/: assignment.ink  binary-expressions.ink  boolean-to-number-coersion.ink  boolean-to-string-coersion.ink  empty-string.ink  expression-statements.ink  fail-assignment-const.ink  fail-assignment-expected-expression.ink  fail-assignment-expected-identifier.ink  negative.ink
tests/syntax/functions/: factorial.ink  fibonacci.ink  simple.ink
tests/syntax/gathers/: empty.ink  greater-level.ink  multiple-levels.ink  multiple-nested.ink  nested.ink  outer.ink  simple.ink  trickey.ink  weave-gather.ink
tests/syntax/knots/: empty-knots.ink  multiple-nested-stitches.ink  nested-stitch.ink  qualified-lookup.ink  simple-stitch.ink  simple.ink
